# snake-game

./: .gitignore  CMakeLists.txt  README.md  temp.txt
src/: main.cpp
src/config/: Config.h  GameSettings.h
src/food/: Food.cpp  Food.h
src/game/: Game.cpp  Game.h
src/obstacles/: ObstacleManager.cpp  ObstacleManager.h
src/persistence/: HighScore.cpp  HighScore.h
src/powerups/: PowerUp.cpp  PowerUp.h
src/snake/: Snake.cpp  Snake.h
src/ui/: EndScreen.cpp  EndScreen.h  StartScreen.cpp  StartScreen.h
src/utils/: Direction.h  Point.h
src/utils/animation/: Animation.cpp  Animation.h
src/utils/color/: Color.cpp  Color.h
src/utils/input/: Input.cpp  Input.h
